# invoice-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/config/: logging.py  settings.py
app/graph/: __init__.py  mail_client.py
app/models/: __init__.py  models.py
app/services/: __init__.py  attachment_handler.py  openai_extractor.py  sheets_writer.py  supabase_client.py
app/workflows/: __init__.py
tests/: test_auth.py  test_openai_extractor.py  test_sheets_writer.py
